<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/PrimaryColor">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/PrimaryColorText"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="Title" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/PrimaryColorText"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="Content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_edit_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/PrimaryColorText">

        <EditText
            android:id="@+id/dialog_edit_text"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColorHint="@color/PrimaryColorText"
            android:background="@color/PrimaryColorLight"
            android:textStyle="bold"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/PrimaryColorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/PrimaryColorText" />

        <TextView
            android:visibility="gone"
            android:id="@+id/dialog_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/reset"
            android:textColor="@color/PrimaryColorText" />

        <TextView
            android:id="@+id/dialog_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/okay"
            android:textColor="@color/PrimaryColorText" />

    </LinearLayout>


</LinearLayout>