<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.coconut.ui.auth.login.LoginViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="60dp"
        android:paddingEnd="20dp"
        android:background="@color/PrimaryColor"
        tools:context=".ui.auth.login.verify.EmailVerifyActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:textColor="@color/PrimaryColorDarkText"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/prompt_verify_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/verify_email"
            android:padding="10dp"
            android:textColor="@color/baseTextColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secetTokenInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"

            android:textColorHint="@color/PrimaryColorDarkText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/PrimaryColorLight"
                android:fontFamily="@font/gotham_medium"
                android:inputType="text"
                android:padding="5dp"
                android:text="@={viewModel.secretToken}"
                android:textColor="@color/PrimaryColorDarkText"
                android:textColorHint="@color/PrimaryColorDarkText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/verifyErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"
            android:textColor="@color/color_error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/gotham_medium"
            android:onClick="@{()-> viewModel.emailVerify()}"
            android:layout_margin="5dp"
            app:cornerRadius="20dp"
            android:text="@string/prompt_verify"
            android:textColor="@color/SecondaryColorDarkText"
            android:textStyle="bold" />
    </LinearLayout>
</layout>
