<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.coconut.ui.auth.passfind.PassFindViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/PrimaryColor"
        android:paddingStart="20dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp"
        tools:context=".ui.auth.passfind.PassFindActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:text="Forgot Password"
            android:textColor="@color/baseTextColor"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/baseTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/findByEmail"
                android:onClick="@{()->viewModel.findByEmail()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/PrimaryColorLight"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="35dp"
                    app:srcCompat="@drawable/mail_w" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gotham_medium"
                    android:padding="10dp"
                    android:text="@string/find_password_by_email"
                    android:textColor="@color/SecondaryColorDarkText"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/findByEmailMore"
                android:visibility="@{viewModel.emailClicked ? View.VISIBLE : View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/findByEmailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/PrimaryColorLight"
                    android:textColor="@color/PrimaryColorLightText"
                    android:padding="10dp"
                    android:fontFamily="@font/gotham_medium"
                    android:hint="Email"
                    android:text="@={viewModel.email}"
                    android:textStyle="bold"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/findBySMS"
                android:onClick="@{()->viewModel.findBySMS()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/PrimaryColorLight"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="35dp"
                    app:srcCompat="@drawable/phone_w" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gotham_medium"
                    android:padding="10dp"
                    android:text="@string/find_password_by_message"
                    android:textColor="@color/SecondaryColorDarkText"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/findBySMSeMore"
                android:visibility="@{viewModel.smsClicked ? View.VISIBLE : View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/findBySMSEmailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/PrimaryColorLight"
                    android:textColor="@color/PrimaryColorLightText"
                    android:padding="10dp"
                    android:fontFamily="@font/gotham_medium"
                    android:hint="Email"
                    android:text="@={viewModel.emailForSMS}"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
                <EditText
                    android:id="@+id/findBySMSEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/PrimaryColorLight"
                    android:textColor="@color/PrimaryColorLightText"
                    android:padding="10dp"
                    android:fontFamily="@font/gotham_medium"
                    android:hint="Phone Number"
                    android:text="@={viewModel.phoneNumber}"
                    android:textStyle="bold"
                    android:ems="10"
                    android:inputType="phone"/>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/gotham_medium"
            android:textStyle="bold"
            android:onClick="@{()->viewModel.findPasswordBtn()}"
            android:text="Find Password" />
    </LinearLayout>
</layout>
