<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.coconut.ui.main.account.info.AccountInfoViewModel" />
    </data>
    <FrameLayout
        android:background="@color/PrimaryColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.account.info.AccountInfoActivity">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_40">

            <LinearLayout
                android:id="@+id/select_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/upper_outline"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <LinearLayout
                    android:id="@+id/chat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        app:srcCompat="@drawable/chatting" />

                    <TextView
                        android:id="@+id/chat_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chatting"
                        android:textAlignment="center"
                        android:textColor="@color/PrimaryColorText"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        app:srcCompat="@drawable/edit" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/editing"
                        android:textAlignment="center"
                        android:textColor="@color/PrimaryColorText"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/call"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        app:srcCompat="@drawable/calling" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calling"
                        android:textAlignment="center"
                        android:textColor="@color/PrimaryColorText"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"

                android:layout_marginEnd="180dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/user_msg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/PrimaryColor"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/account" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="user_name"
                    android:textAlignment="center"
                    android:textColor="@color/PrimaryColorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/user_id_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="90dp"
                android:background="@drawable/round_outline"
                android:paddingStart="10dp"
                android:paddingTop="6dp"

                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:text="user_id"
                android:textAlignment="center"
                android:textColor="@color/PrimaryColorText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/user_id_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/user_id_"
                app:layout_constraintEnd_toEndOf="@+id/user_id_"
                app:layout_constraintTop_toTopOf="@+id/user_id_"
                app:layout_constraintVertical_bias="0.428"
                app:srcCompat="@drawable/ic_edit_location_black_24dp" />

            <ImageView
                android:id="@+id/user_img_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="152dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                app:srcCompat="@drawable/ic_edit_location_black_24dp" />

            <ImageView
                android:id="@+id/back_img_edit_icon"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="52dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_location_black_24dp" />

            <TextView
                android:id="@+id/edit_complete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:background="@color/transparent_10"
                android:padding="7dp"
                android:text="@string/edit_complete"
                android:textColor="@color/PrimaryColorText"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="15dp"
                android:background="@color/transparent_20"
                android:maxLines="2"
                android:padding="5dp"
                android:text="message"
                android:textAlignment="center"
                android:textColor="@color/PrimaryColorText"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/select_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/user_desc_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/user_msg"
                app:layout_constraintEnd_toStartOf="@+id/user_msg"
                app:layout_constraintHorizontal_bias="0.942"
                app:layout_constraintStart_toEndOf="@+id/user_msg"
                app:layout_constraintTop_toTopOf="@+id/user_msg"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_edit_location_black_24dp" />

            <ImageView
                android:id="@+id/user_name_edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                app:srcCompat="@drawable/ic_edit_location_black_24dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
